changes on index

--- a/index.html
+++ b/index.html
@@ -5,34 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet"  href="style.css">
+    <link rel="stylesheet"  href="index.css">
 </head>
 <body>
     <h1>
-        This is a ticker app
+        This is my main page which are linked to other cool apps.
     </h1>
-
-    <p>
-        Please click on the button to increase the count.
-    </p>
-
-    <h1 id="increamentext">
-        0
-    </h1>
-
-    <button  class="button" onclick="increamentButton()">
-        increament
-    </button>
-
-    <button  class="button" onclick="decreamentButton()">
-        decreament
-    </button>
-
-    <button class="button" onclick="refresh()">
-        restart
-    </button>
     
-    <script src="index.js"></script>
-
 </body>
 </html>
